fix scroll tabs on mobile

--- a/scss/_how-work.scss
+++ b/scss/_how-work.scss
@@ -37,7 +37,7 @@
 		max-width: 1178px;
 		display: flex;
 		justify-content: center;
-		padding: 60px 0;
+		padding: 60px 0 0;
 		margin: 0 auto;
 		top: -50px;
 		z-index: 100;
@@ -45,7 +45,7 @@
 		@media (max-width: 425px) {
 			width: 100%;
 			justify-content: start;
-			padding: 40px 0 20px;
+			padding: 40px 0 30px;
 			top: -30px;
 		}
 	}
@@ -93,6 +93,7 @@
 		display: flex;
 		flex-direction: column;
 		margin: 0 auto;
+        padding-top: 60px;
 	}
 
 	&__cards-item {
