--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-
 * {
 	margin: 0;
 	padding: 0;
@@ -27,21 +26,21 @@ h3 {
 	padding-left: calc((100% - 1120px) / 2);
 	padding-right: calc((100% - 1120px) / 2);
 
-    @media (max-width: 768px) {
-        padding: 0 4.3%;
-    }
+	@media (max-width: 768px) {
+		padding: 0 4.3%;
+	}
 }
 
-.hidden-mobile{
-    @media (max-width: 425px) {
-        display: none !important;
-    }
+.hidden-mobile {
+	@media (max-width: 425px) {
+		display: none !important;
+	}
 }
 
-.hidden-desktop{
-    @media (min-width: 425.9px) {
-        display: none !important;
-    }
+.hidden-desktop {
+	@media (min-width: 425.9px) {
+		display: none !important;
+	}
 }
 
 .logo {
@@ -83,7 +82,7 @@ h3 {
 	background-color: #000000ba;
 	transform: scale(0);
 	z-index: 9999;
-	transition: .3s;
+	transition: 0.3s;
 	&_show {
 		display: block;
 		transition: all 0.3s 0.3s;
@@ -124,12 +123,12 @@ h3 {
 		margin: 20px 0;
 		padding: 35px 65px 65px;
 		overflow: auto;
-        @media (max-width:425px) {
-            width: 98%;
-            left: 5px ;
-            right: 5px;
-            padding: 35px 16px 65px;
-        }
+		@media (max-width: 425px) {
+			width: 98%;
+			left: 5px;
+			right: 5px;
+			padding: 35px 16px 65px;
+		}
 	}
 
 	&-content__heading {
@@ -176,10 +175,10 @@ h3 {
 		cursor: pointer;
 		transition: all 0.3s;
 
-		&_disabled{
+		&_disabled {
 			pointer-events: none;
 		}
-		opacity: .7;
+		opacity: 0.7;
 
 		&:hover {
 			box-shadow: 2px 2px 10px 0px #9d9999;
@@ -319,9 +318,9 @@ h3 {
 	transform: scale(0);
 	transition: 0.3s;
 
-    @media (max-width:425px) {
-        width: 98%;
-    }
+	@media (max-width: 425px) {
+		width: 98%;
+	}
 
 	&__close {
 		position: absolute;
@@ -410,7 +409,14 @@ h3 {
 		box-shadow: inset 2px 2px 2px 0px #0f253e4f;
 	}
 }
-
+@media (max-width: 768px) {
+	::-webkit-scrollbar {
+		width: 0px;
+	}
+	::-webkit-scrollbar-track-piece {
+		background-color: transparent;
+	}
+}
 // Animations
 @keyframes phoneAnimate {
 	0% {
@@ -463,7 +469,5 @@ h3 {
 @import 'footer';
 @import 'sing-in';
 
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
-
